# stock-market-pro

./: .gitignore  README.md  SKILL.md  main.py  pyproject.toml  start_web.sh  stock_analysis_20260418.json  stock_analysis_report.md  stock_recommendation_history.json  web_app.py  web_app_v2.py
.clawhub/: origin.json
docs/: ARCHITECTURE.md
scripts/: add_stocks.py  daily_analysis_and_send.py  daily_recommendation_20260421.md  debug_fundamental.py  get_current_prices.py  get_prices_akshare.py  get_prices_alpha.py  migrate_existing_to_history.py  price_alert.py  price_check.py  refresh_data.py  stock_analysis.py  stock_analysis_20260614.json  stock_analysis_direct.py  stock_analysis_with_history.py  stock_analysis_yf.py  stock_get_fundamentals.py  stock_price_real.py  stock_recommendation_history.json  stock_update_alpha_vantage.py  stock_update_with_delay.py  stock_watchlist.json  test_akshare.py  test_akshare_us.py  test_tsla.py
