[project]
name = "stock-market-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "mplfinance>=0.12.10b0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "ta>=0.11.0",
    "yfinance>=1.3.0",
]
